[BZ1168670] Enable the security manager in the DomainLifecycleUtil.